button hover effects

--- a/index.css
+++ b/index.css
@@ -44,11 +44,15 @@ button{
  background-color: #A7AED9;
  padding:5px;
  width:200px;
-
+cursor:pointer;
  border-radius: 10px;
  font-family: 'Architects Daughter', cursive;
  font-weight: bold;
  border-color: #A7AED9;
+}
+button:hover{
+    transform: scale(1.1);
+    
 }
 
 #list{
